--- a/.github/workflows/pr-review-agents.yml
+++ b/.github/workflows/pr-review-agents.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   issues: write
 
@@ -35,12 +35,15 @@ jobs:
           pnpm install
 
       - name: Run CTO Review Agent
+        id: cto-review
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           node .github/scripts/cto-review-agent.js
+    outputs:
+      should_block: ${{ steps.cto-review.outputs.should_block || 'false' }}
 
   ciso-review:
     name: CISO Security Review
@@ -67,9 +70,38 @@ jobs:
           pnpm install
 
       - name: Run CISO Security Review
+        id: ciso-review
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           node .github/scripts/ciso-review-agent.js
+    outputs:
+      should_block: ${{ steps.ciso-review.outputs.should_block || 'false' }}
+
+  auto-merge:
+    name: Auto-Merge PR
+    runs-on: ubuntu-latest
+    needs: [cto-review, ciso-review]
+    if: |
+      needs.cto-review.outputs.should_block != 'true' &&
+      needs.ciso-review.outputs.should_block != 'true' &&
+      github.event.pull_request.draft == false
+    steps:
+      - name: Wait for other checks
+        run: sleep 30
+
+      - name: Auto-merge PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          # Check if PR is from automated branch
+          if [[ "${{ github.event.pull_request.head.ref }}" == automated/* ]]; then
+            echo "🤖 Auto-merging automated PR #${PR_NUMBER}..."
+            gh pr merge ${PR_NUMBER} --auto --squash --repo ${{ github.repository }}
+            echo "✅ Auto-merge enabled for PR #${PR_NUMBER}"
+          else
+            echo "⏭️ Skipping auto-merge: Not an automated PR"
+          fi
